--- a/Assignment5/Style.css
+++ b/Assignment5/Style.css
@@ -25,8 +25,8 @@ h2{
 .nav li{
     text-align: left;
     background-color: darkblue;
-    padding: 15px 25px 15px 10px;
-    margin: 10px;
+    padding: 15px 25px 15px 15px;
+    margin-right: 20px;
     display: inline-block;
     width: 150px;
 }
